@@ -34,11 +34,13 @@ csv_decoder_new
   It is important to understand the difference between a ROW and a LINE
   in a CSV formatted file: a row may span more than one line in a file.
   The `skiplines' qualifier specifies the number of LINES to be
-  skipped, not ROWS.
+  skipped, not ROWS.  However, if a comment string appears at the
+  beginning of one of the lines forming a multiline string, it will
+  treated as part of the string and not as a comment.
 
   CSV files have no notion of data-types: all field values are strings.
   For this reason, the `type' qualifier introduces an extra layer
-  that is not part CSV format.
+  that is not part of the CSV specification.
 
  SEE ALSO
   csv.readcol, csv.readrow
